Update encoding in CardInfoFetcher